--- a/directbak.yaml
+++ b/directbak.yaml
@@ -268,6 +268,7 @@ payload:
   - '+.0378zz.com'
   - '+.0379home.com'
   - '+.0379pfw.com'
+  - '+.037q.com'
   - '+.03964.com'
   - '+.03dq.com'
   - '+.03k.org'
@@ -2275,6 +2276,7 @@ payload:
   - '+.281010.com'
   - '+.28123.com'
   - '+.2827.com'
+  - '+.2835177ccc.com'
   - '+.28493.com'
   - '+.2853x.com'
   - '+.2858999.com'
@@ -2419,6 +2421,7 @@ payload:
   - '+.3023.com'
   - '+.302302.xyz'
   - '+.3033c.com'
+  - '+.3044.com'
   - '+.306t.com'
   - '+.308308.com'
   - '+.30c.org'
@@ -9201,6 +9204,7 @@ payload:
   - '+.aword.net'
   - '+.awotuan.com'
   - '+.awoyun.com'
+  - '+.awsdns-cn-21.biz'
   - '+.awsdns-cn-36.net'
   - '+.awsdns-cn-57.com'
   - '+.awsdns-cn-58.net'
@@ -12948,6 +12952,7 @@ payload:
   - '+.ceunion.com'
   - '+.ceve-market.org'
   - '+.cevsn.com'
+  - '+.ceye.io'
   - '+.cf-china.info'
   - '+.cf-ns.com'
   - '+.cf-ns.net'
@@ -12960,6 +12965,7 @@ payload:
   - '+.cfc365.com'
   - '+.cfca-c.org'
   - '+.cfcdn.org'
+  - '+.cfcf.ink'
   - '+.cfcglx.com'
   - '+.cfcp67.com'
   - '+.cfcpn.com'
@@ -13720,6 +13726,7 @@ payload:
   - '+.chinaccnet.net'
   - '+.chinaccsi.com'
   - '+.chinacct.org'
+  - '+.chinacdc.com'
   - '+.chinaceot.com'
   - '+.chinaceotv.com'
   - '+.chinacfi.net'
@@ -17812,6 +17819,7 @@ payload:
   - '+.dhrcbank.com'
   - '+.dhrest.com'
   - '+.dht5867.com'
+  - '+.dhvisiontech.com'
   - '+.dhwooden.com'
   - '+.dhyct.com'
   - '+.dhygw20.com'
@@ -18463,6 +18471,7 @@ payload:
   - '+.docs.oracle.com'
   - '+.docschina.org'
   - '+.docsou.com'
+  - '+.doctor-network.com'
   - '+.doctorcom.com'
   - '+.doctorxiong.club'
   - '+.documents.cdnetworks.com'
@@ -20195,6 +20204,7 @@ payload:
   - '+.engr-z.com'
   - '+.enguo.com'
   - '+.engz.net'
+  - '+.enhjqi.com'
   - '+.enicn.com'
   - '+.enjoy.link'
   - '+.enjoy1992.com'
@@ -20785,7 +20795,6 @@ payload:
   - '+.f5gh.com'
   - '+.f5sd.com'
   - '+.f5yx.com'
-  - '+.f773.com'
   - '+.f7777.net'
   - '+.fa-today.com'
   - '+.fa597.com'
@@ -21849,6 +21858,7 @@ payload:
   - '+.foodspace.net'
   - '+.foodszs.com'
   - '+.foodu14.com'
+  - '+.foofish.net'
   - '+.fooher.com'
   - '+.foojoo.com'
   - '+.fookwood.com'
@@ -22925,6 +22935,7 @@ payload:
   - '+.geekerconsulting.com'
   - '+.geekfan.net'
   - '+.geekfans.com'
+  - '+.geekgay.com'
   - '+.geekhub.com'
   - '+.geekiron.com'
   - '+.geekluo.com'
@@ -24858,7 +24869,6 @@ payload:
   - '+.halomobi.com'
   - '+.haluoha.com'
   - '+.hama-net.com'
-  - '+.hamanw.com'
   - '+.hambut.com'
   - '+.hamir.net'
   - '+.han-ju.cc'
@@ -25112,6 +25122,7 @@ payload:
   - '+.haomaku.com'
   - '+.haomee.net'
   - '+.haomeili.net'
+  - '+.haomenke.com'
   - '+.haomijie.com'
   - '+.haommn.com'
   - '+.haomove.com'
@@ -27481,6 +27492,7 @@ payload:
   - '+.huijiewei.com'
   - '+.huijimall.com'
   - '+.huijistatic.com'
+  - '+.huijita.com'
   - '+.huijitrans.com'
   - '+.huijiwiki.com'
   - '+.huijucn.com'
@@ -27492,6 +27504,7 @@ payload:
   - '+.huilianyi.com'
   - '+.huilitao.com'
   - '+.huiliubao.com'
+  - '+.huiliuti.com'
   - '+.huilm.com'
   - '+.huilog.com'
   - '+.huilongsen.com'
@@ -29961,6 +29974,7 @@ payload:
   - '+.itry.com'
   - '+.its114.com'
   - '+.itshai.com'
+  - '+.itshubao.com'
   - '+.itsiwei.com'
   - '+.itsk.com'
   - '+.itslaw.com'
@@ -34558,6 +34572,7 @@ payload:
   - '+.learn-quantum.com'
   - '+.learndiary.com'
   - '+.learnfans.com'
+  - '+.learnfk.com'
   - '+.learnfuture.com'
   - '+.learning-archive.org'
   - '+.learnku.com'
@@ -34697,6 +34712,7 @@ payload:
   - '+.lekoukou.com'
   - '+.lekpass.com'
   - '+.lelai.com'
+  - '+.lele-lezhong.com'
   - '+.leleda.com'
   - '+.leledp.com'
   - '+.leleketang.com'
@@ -37830,6 +37846,7 @@ payload:
   - '+.miguvideo.com'
   - '+.miguyu.com'
   - '+.mihan.cc'
+  - '+.mihanw.com'
   - '+.mihayo.com'
   - '+.mihayou.com'
   - '+.mihayou.fun'
@@ -38174,6 +38191,7 @@ payload:
   - '+.mlwplus.com'
   - '+.mlwu.net'
   - '+.mlxks.com'
+  - '+.mlxmall.com'
   - '+.mlycdn.com'
   - '+.mlyfc.net'
   - '+.mlyfcyy.com'
@@ -38273,6 +38291,7 @@ payload:
   - '+.mobayx.com'
   - '+.mobcent.com'
   - '+.mobcloud.mobi'
+  - '+.mobdna.com'
   - '+.mobeehome.com'
   - '+.mobgi.com'
   - '+.mobiapp.cloud'
@@ -42058,6 +42077,7 @@ payload:
   - '+.podjiasu.org'
   - '+.poem88.com'
   - '+.poemaster.com'
+  - '+.poemfk.com'
   - '+.poemlife.com'
   - '+.pohaier.com'
   - '+.pohover.com'
@@ -44389,6 +44409,7 @@ payload:
   - '+.redrock.team'
   - '+.redsh.com'
   - '+.redshu.com'
+  - '+.redstonewill.com'
   - '+.redsun-rp.com'
   - '+.redsunsets.ml'
   - '+.redyue.com'
@@ -44952,6 +44973,7 @@ payload:
   - '+.rubyer.me'
   - '+.ruchee.com'
   - '+.ruchu.club'
+  - '+.rudangla.com'
   - '+.rueinet.com'
   - '+.rufei.ren'
   - '+.rufengso.net'
@@ -46407,6 +46429,7 @@ payload:
   - '+.shenmufeiyang0912.com'
   - '+.shenou.com'
   - '+.shenpinwu.com'
+  - '+.shenpucw.com'
   - '+.shenqhy.com'
   - '+.shenqibuy.com'
   - '+.shenqiwunet.com'
@@ -50582,6 +50605,7 @@ payload:
   - '+.tinfinite.com'
   - '+.ting-tou.com'
   - '+.ting55.com'
+  - '+.tinga88.com'
   - '+.tingall.com'
   - '+.tingbook.com'
   - '+.tingcd.com'
@@ -50955,6 +50979,7 @@ payload:
   - '+.tool.la'
   - '+.tool.lu'
   - '+.tool77.com'
+  - '+.toolfk.com'
   - '+.toolmall.com'
   - '+.toolmao.com'
   - '+.toolnb.com'
@@ -51079,6 +51104,7 @@ payload:
   - '+.touqikan.com'
   - '+.tour110.com'
   - '+.tourboxtech.com'
+  - '+.tourenwang.com'
   - '+.tourhr.com'
   - '+.tourjob.net'
   - '+.tourongjia.com'
@@ -51576,6 +51602,7 @@ payload:
   - '+.tujidu.com'
   - '+.tujiwar.com'
   - '+.tujixiazai.com'
+  - '+.tujuren.com'
   - '+.tuke8.com'
   - '+.tuke88.com'
   - '+.tukexw.com'
@@ -53117,6 +53144,7 @@ payload:
   - '+.vmvps.com'
   - '+.vnet.mobi'
   - '+.vnnox.com'
+  - '+.vnsr9488.com'
   - '+.vnvshen.com'
   - '+.vnzmi.com'
   - '+.vobao.com'
@@ -53142,6 +53170,7 @@ payload:
   - '+.volcgtm.com'
   - '+.volchina.com'
   - '+.volcimagex.net'
+  - '+.volcsirius.com'
   - '+.volcsiriusbd.com'
   - '+.volctracer.com'
   - '+.volcvideo.com'
@@ -56609,6 +56638,7 @@ payload:
   - '+.xianmaiyangsheng.com'
   - '+.xianms.com'
   - '+.xianniuzu.com'
+  - '+.xianpinyun.com'
   - '+.xianpp.com'
   - '+.xianruan.com'
   - '+.xianshiqiba.com'
@@ -57623,6 +57653,7 @@ payload:
   - '+.xkbsw.com'
   - '+.xkcd.in'
   - '+.xkcun.com'
+  - '+.xkcxh.com'
   - '+.xkdmp.com'
   - '+.xker.com'
   - '+.xkhouse.com'
@@ -59636,6 +59667,7 @@ payload:
   - '+.yixao.net'
   - '+.yixi.tv'
   - '+.yixia.com'
+  - '+.yixiangzuji.com'
   - '+.yixiaoxi.com'
   - '+.yixiaozu.com'
   - '+.yixie8.com'
@@ -63691,6 +63723,7 @@ payload:
   - '+.zuitu.com'
   - '+.zuiwan.net'
   - '+.zuixiaoyao.com'
+  - '+.zuixinyiqi.com'
   - '+.zuixu.com'
   - '+.zuiyou.com'
   - '+.zuiyouxi.com'
