--- a/directbak.yaml
+++ b/directbak.yaml
@@ -518,6 +518,7 @@ payload:
   - '+.0772job.com'
   - '+.0775fcw.com'
   - '+.0775jzw.com'
+  - '+.07879.com'
   - '+.07890.com'
   - '+.0791look.com'
   - '+.0791quanquan.com'
@@ -1553,7 +1554,6 @@ payload:
   - '+.17whz.com'
   - '+.17win.com'
   - '+.17ww.cc'
-  - '+.17xie.com'
   - '+.17xlm.com'
   - '+.17xsj.com'
   - '+.17xueba.com'
@@ -2260,7 +2260,6 @@ payload:
   - '+.275st.com'
   - '+.277sy.com'
   - '+.278838mcu.com'
-  - '+.279.com'
   - '+.2799web.com'
   - '+.279wo.com'
   - '+.27aichi.com'
@@ -2553,8 +2552,6 @@ payload:
   - '+.3323399.com'
   - '+.332831.com'
   - '+.333-555.com'
-  - '+.3332219.com'
-  - '+.3332235.com'
   - '+.3332358.com'
   - '+.333333.com'
   - '+.3335665.com'
@@ -2834,6 +2831,7 @@ payload:
   - '+.365500.com'
   - '+.365708.com'
   - '+.36578.com'
+  - '+.3658888.com'
   - '+.365960.com'
   - '+.365art.com'
   - '+.365auto.com'
@@ -4377,7 +4375,6 @@ payload:
   - '+.52zx.net'
   - '+.52zxw.com'
   - '+.52zy.com'
-  - '+.52zzl.com'
   - '+.531314.com'
   - '+.5317wan.com'
   - '+.532106.com'
@@ -4925,7 +4922,6 @@ payload:
   - '+.6-china.com'
   - '+.60.cm'
   - '+.600052.com'
-  - '+.60012.com'
   - '+.600895.com'
   - '+.600zi.com'
   - '+.601601.com'
@@ -5458,6 +5454,7 @@ payload:
   - '+.7580.ltd'
   - '+.75n474.com'
   - '+.75xyx.com'
+  - '+.76065.com'
   - '+.7618.com'
   - '+.761a.com'
   - '+.762rc.com'
@@ -6063,7 +6060,6 @@ payload:
   - '+.88dushu.com'
   - '+.88fenxiao.com'
   - '+.88h3.com'
-  - '+.88hd.com'
   - '+.88hom.com'
   - '+.88ht.com'
   - '+.88hu.com'
@@ -6342,7 +6338,6 @@ payload:
   - '+.91juice.com'
   - '+.91kami.com'
   - '+.91kanju.com'
-  - '+.91keman.com'
   - '+.91keto.com'
   - '+.91laihama.com'
   - '+.91ld.com'
@@ -6547,7 +6542,6 @@ payload:
   - '+.94afx.com'
   - '+.94cb.com'
   - '+.94cto.com'
-  - '+.94dwc.com'
   - '+.94he38.com'
   - '+.94i5.com'
   - '+.94ip.com'
@@ -7426,7 +7420,6 @@ payload:
   - '+.afjk.com'
   - '+.afjob88.com'
   - '+.afriendx.com'
-  - '+.afs-seminars.com'
   - '+.afshanghai.org'
   - '+.aft1v1.com'
   - '+.afu.io'
@@ -8089,7 +8082,6 @@ payload:
   - '+.aliwd.com'
   - '+.aliwears.com'
   - '+.aliwx.net'
-  - '+.alixinwen.com'
   - '+.alixixi.com'
   - '+.alixox.com'
   - '+.aliyiyao.com'
@@ -9205,6 +9197,7 @@ payload:
   - '+.awotuan.com'
   - '+.awoyun.com'
   - '+.awsdns-cn-21.biz'
+  - '+.awsdns-cn-24.com'
   - '+.awsdns-cn-36.net'
   - '+.awsdns-cn-57.com'
   - '+.awsdns-cn-58.net'
@@ -10301,6 +10294,8 @@ payload:
   - '+.bestzone.org'
   - '+.bet007.com'
   - '+.bet18lk.biz'
+  - '+.bet333.com'
+  - '+.bet555.com'
   - '+.betaflare.com'
   - '+.betaidc.com'
   - '+.betajy.com'
@@ -10849,7 +10844,6 @@ payload:
   - '+.bjcyzg.com'
   - '+.bjczxt.com'
   - '+.bjdachi.com'
-  - '+.bjdbrc.com'
   - '+.bjdcfy.com'
   - '+.bjdfxj.com'
   - '+.bjdiaoyu.com'
@@ -11560,7 +11554,6 @@ payload:
   - '+.btc116.com'
   - '+.btc123.com'
   - '+.btc17.com'
-  - '+.btc38.com'
   - '+.btc5.net'
   - '+.btc789.com'
   - '+.btcbbs.com'
@@ -12203,7 +12196,6 @@ payload:
   - '+.canyouchina.com'
   - '+.canyuanzs.com'
   - '+.caobao.com'
-  - '+.caodan.org'
   - '+.caogen.com'
   - '+.caogen88.com'
   - '+.caohaifeng.com'
@@ -12357,7 +12349,6 @@ payload:
   - '+.cc0808.com'
   - '+.cc1021.com'
   - '+.cc11bh.com'
-  - '+.cc148.com'
   - '+.cc222.com'
   - '+.cc55k.com'
   - '+.cc7m.com'
@@ -12471,7 +12462,6 @@ payload:
   - '+.ccmdls.adobe.com'
   - '+.ccme.cc'
   - '+.ccmfcm.com'
-  - '+.ccmnn.com'
   - '+.ccmodel.com'
   - '+.ccmodel.net'
   - '+.ccmw.net'
@@ -13503,7 +13493,6 @@ payload:
   - '+.chi2ko.com'
   - '+.chi588.com'
   - '+.chiang.fun'
-  - '+.chianuos.com'
   - '+.chichou.me'
   - '+.chichuang.com'
   - '+.chidaolian.com'
@@ -14922,6 +14911,7 @@ payload:
   - '+.cmcm5.com'
   - '+.cmcm55.cc'
   - '+.cmcmcdn.com'
+  - '+.cmct22.com'
   - '+.cmd5.com'
   - '+.cmd5.la'
   - '+.cmd5.org'
@@ -15604,7 +15594,6 @@ payload:
   - '+.coco413.com'
   - '+.cocoachina.com'
   - '+.cocodiy.com'
-  - '+.cocomanga.com'
   - '+.coconuet.com'
   - '+.cocophp.com'
   - '+.cocoren.com'
@@ -16613,7 +16602,6 @@ payload:
   - '+.cxthhhhh.com'
   - '+.cxtuku.com'
   - '+.cxtxt.com'
-  - '+.cxvlog.com'
   - '+.cxw.com'
   - '+.cxwl.com'
   - '+.cxwyf.net'
@@ -17653,7 +17641,6 @@ payload:
   - '+.developer.vive.com'
   - '+.devemi.com'
   - '+.devework.com'
-  - '+.devexception.com'
   - '+.devexel-tech.com'
   - '+.devexel.com'
   - '+.devexpresscn.com'
@@ -18256,7 +18243,6 @@ payload:
   - '+.dl8z.com'
   - '+.dlangchina.com'
   - '+.dlbh.net'
-  - '+.dlbljy.com'
   - '+.dlbyg.com'
   - '+.dlcaic.com'
   - '+.dld.com'
@@ -21369,7 +21355,6 @@ payload:
   - '+.fengmanginfo.com'
   - '+.fengmaniu.com'
   - '+.fengmeng.net'
-  - '+.fengmi-baike.com'
   - '+.fengmk2.com'
   - '+.fengniao.com'
   - '+.fengniaohuanjing.com'
@@ -21453,7 +21438,6 @@ payload:
   - '+.ffdns.net'
   - '+.ffeeii.com'
   - '+.ffepower.com'
-  - '+.fffbbf.com'
   - '+.ffff.cc'
   - '+.fffzgh.com'
   - '+.ffhre.com'
@@ -22349,6 +22333,7 @@ payload:
   - '+.fychinago.com'
   - '+.fycpu.com'
   - '+.fydeos.com'
+  - '+.fydns360.net'
   - '+.fyeds0.com'
   - '+.fyeds1.com'
   - '+.fyeds2.com'
@@ -22595,6 +22580,7 @@ payload:
   - '+.ganlv.org'
   - '+.ganlvji.com'
   - '+.ganniu.com'
+  - '+.ganode.org'
   - '+.ganqi.com'
   - '+.ganqi.net'
   - '+.ganso.net'
@@ -22853,7 +22839,6 @@ payload:
   - '+.gdrc360.com'
   - '+.gdrc365.com'
   - '+.gdrcu.com'
-  - '+.gdreload.com'
   - '+.gdrfyy.com'
   - '+.gds-services.com'
   - '+.gdscse.net'
@@ -27127,7 +27112,6 @@ payload:
   - '+.huachengenjoy.com'
   - '+.huachenit.com'
   - '+.huachenyuanyang.com'
-  - '+.huaci.cc'
   - '+.huacolor.com'
   - '+.huada120.com'
   - '+.huadan.com'
@@ -28521,7 +28505,6 @@ payload:
   - '+.idaxiang.org'
   - '+.idbhost.com'
   - '+.idc-icp.com'
-  - '+.idc.moe'
   - '+.idc.sh'
   - '+.idc002.com'
   - '+.idc021.com'
@@ -28751,7 +28734,6 @@ payload:
   - '+.ifnews.com'
   - '+.ifonelab.net'
   - '+.iforce-media.com'
-  - '+.iforl.com'
   - '+.ifoxfactory.com'
   - '+.ifreecdn.com'
   - '+.ifreecomm.com'
@@ -29285,7 +29267,6 @@ payload:
   - '+.incensechina.com'
   - '+.incker.com'
   - '+.incloudexpo.com'
-  - '+.incoto.com'
   - '+.incsg.com'
   - '+.ind-app-comp.com'
   - '+.ind-map.com'
@@ -29337,7 +29318,6 @@ payload:
   - '+.infosoft.cc'
   - '+.infovc.com'
   - '+.infowuxi.com'
-  - '+.infoxa.com'
   - '+.infoxgame.com'
   - '+.infoxmation.com'
   - '+.inframe.mobi'
@@ -30235,7 +30215,6 @@ payload:
   - '+.j5k6.com'
   - '+.j66.net'
   - '+.j7994.com'
-  - '+.j9p.com'
   - '+.jaadee.com'
   - '+.jaadee.net'
   - '+.jabizb.com'
@@ -32652,6 +32631,7 @@ payload:
   - '+.kada.com'
   - '+.kadang.com'
   - '+.kadingding.com'
+  - '+.kaertuo.com'
   - '+.kafangtech.com'
   - '+.kafka.cc'
   - '+.kagirl.net'
@@ -33123,6 +33103,7 @@ payload:
   - '+.keyoou.com'
   - '+.keyray-hk.com'
   - '+.keyshot.cc'
+  - '+.keytoix.vip'
   - '+.keyuhome.com'
   - '+.keyunidc.com'
   - '+.keyunsoft.com'
@@ -34948,7 +34929,6 @@ payload:
   - '+.lhy1.xyz'
   - '+.lhy2.xyz'
   - '+.lhy3.xyz'
-  - '+.lhy4.xyz'
   - '+.lhyiliao.com'
   - '+.lhzq.com'
   - '+.li-ca.com'
@@ -35430,7 +35410,6 @@ payload:
   - '+.lionmobo.com'
   - '+.lionmobo.net'
   - '+.lipai365.com'
-  - '+.lipf.tech'
   - '+.lipian.com'
   - '+.lipiji.com'
   - '+.lipilianghang.com'
@@ -36583,7 +36562,6 @@ payload:
   - '+.lyzfgjj.com'
   - '+.lyzhujia.com'
   - '+.lyzp100.com'
-  - '+.lz160.net'
   - '+.lz310.com'
   - '+.lz520.net'
   - '+.lzabcd.com'
@@ -37595,7 +37573,6 @@ payload:
   - '+.meteni.com'
   - '+.metenk12.com'
   - '+.metersbonwe.com'
-  - '+.metersbonwe.net'
   - '+.metin520.com'
   - '+.metlifezeng.com'
   - '+.metnews.net'
@@ -37945,7 +37922,6 @@ payload:
   - '+.mindopu.com'
   - '+.mindpin.com'
   - '+.mindray.com'
-  - '+.mindstore.io'
   - '+.minecraftxz.com'
   - '+.mineplugin.org'
   - '+.minerfun.com'
@@ -39809,7 +39785,6 @@ payload:
   - '+.nikkisoft.com'
   - '+.nikkiup2u2.com'
   - '+.nilai.com'
-  - '+.nilegu.com'
   - '+.niliu.me'
   - '+.nilmap.com'
   - '+.nima.wang'
@@ -49336,6 +49311,7 @@ payload:
   - '+.szjunfei.com'
   - '+.szjuquan.com'
   - '+.szjytx.com'
+  - '+.szkegao.net'
   - '+.szkingdom.com'
   - '+.szkoa.com'
   - '+.szlan.com'
@@ -49880,6 +49856,7 @@ payload:
   - '+.tbhelper.com'
   - '+.tbhjgc.com'
   - '+.tbizk.com'
+  - '+.tbjtss.com'
   - '+.tbkf.net'
   - '+.tbl-import.com'
   - '+.tblk.me'
@@ -51110,7 +51087,6 @@ payload:
   - '+.tourongjia.com'
   - '+.tourongzi.org'
   - '+.tourscool.com'
-  - '+.toursforfun.com'
   - '+.tourye.com'
   - '+.toushibao.com'
   - '+.toushivip.com'
@@ -51200,7 +51176,6 @@ payload:
   - '+.tqqa.com'
   - '+.tqsafe.com'
   - '+.tqschool.net'
-  - '+.tqw21.com'
   - '+.tqybw.net'
   - '+.trace4me.com'
   - '+.tracefact.net'
@@ -51883,7 +51858,6 @@ payload:
   - '+.tycqxs.com'
   - '+.tycredit.com'
   - '+.tydouke.com'
-  - '+.tyee8.com'
   - '+.tyfo.com'
   - '+.tyhjzx.com'
   - '+.tyi365.com'
@@ -52129,7 +52103,6 @@ payload:
   - '+.uedhome.net'
   - '+.uedna.com'
   - '+.uedsc.com'
-  - '+.uee.me'
   - '+.ueeshop.com'
   - '+.uehtml.com'
   - '+.ueibo.com'
@@ -53635,7 +53608,6 @@ payload:
   - '+.wanguoschool.net'
   - '+.wanguotong.com'
   - '+.wangwango.com'
-  - '+.wangwenda.com'
   - '+.wangwo.net'
   - '+.wangxc.club'
   - '+.wangxiangyule.com'
@@ -58781,7 +58753,6 @@ payload:
   - '+.yaoying.vip'
   - '+.yaoyl.com'
   - '+.yaoyouke.com'
-  - '+.yaoyuanba.com'
   - '+.yaozh.com'
   - '+.yaozhixiang.com'
   - '+.yaozhizhu.com'
@@ -58933,7 +58904,6 @@ payload:
   - '+.ydsaso.com'
   - '+.ydsjjs.com'
   - '+.ydstatic.com'
-  - '+.ydsyxzx.com'
   - '+.ydtad.com'
   - '+.ydtbl.com'
   - '+.ydtnotary.com'
@@ -59631,7 +59601,6 @@ payload:
   - '+.yitanyun.com'
   - '+.yitaojiayuan.com'
   - '+.yitel.com'
-  - '+.yitenggz.com'
   - '+.yitesoft.com'
   - '+.yitianshidai.com'
   - '+.yitianxinda.com'
@@ -60758,7 +60727,6 @@ payload:
   - '+.yueyuez.com'
   - '+.yueyuzhushou.com'
   - '+.yueyv.com'
-  - '+.yuez.me'
   - '+.yufeitongji.com'
   - '+.yufengyangfan.com'
   - '+.yufu365.com'
@@ -62089,7 +62057,6 @@ payload:
   - '+.zhaomengtu.com'
   - '+.zhaoming.biz'
   - '+.zhaomxd.com'
-  - '+.zhaoneibuquan.com'
   - '+.zhaoniupai.com'
   - '+.zhaoonline.com'
   - '+.zhaopianzhibo.com'
@@ -62484,7 +62451,6 @@ payload:
   - '+.zhizugz.com'
   - '+.zhizunbao668.com'
   - '+.zhizunbo.com'
-  - '+.zhizundns.com'
   - '+.zhizunnews.com'
   - '+.zhizuobiao.com'
   - '+.zhizuobiaojiaoyu.com'
@@ -63553,7 +63519,6 @@ payload:
   - '+.zsbeike.com'
   - '+.zsbit.com'
   - '+.zsbsoft.com'
-  - '+.zsc.io'
   - '+.zscaishang.com'
   - '+.zsdk.cc'
   - '+.zsdlw.com'
