--- a/directbak.yaml
+++ b/directbak.yaml
@@ -54,7 +54,6 @@ payload:
   - '+.00cha.net'
   - '+.00ic.com'
   - '+.00it.net'
-  - '+.00lewen.com'
   - '+.00tera.com'
   - '+.00txt.com'
   - '+.00wv.com'
@@ -3114,7 +3113,6 @@ payload:
   - '+.3fgal.com'
   - '+.3g-edu.org'
   - '+.3g210.com'
-  - '+.3g2win.com'
   - '+.3g3h.org'
   - '+.3g567.com'
   - '+.3gdisk.com'
@@ -9257,6 +9255,7 @@ payload:
   - '+.azhimalayanvh.com'
   - '+.azhituo.com'
   - '+.azhjt.com'
+  - '+.azinbate.info'
   - '+.azooo.com'
   - '+.azoyacdn.com'
   - '+.azoyagroup.com'
@@ -10210,7 +10209,6 @@ payload:
   - '+.benkua.com'
   - '+.benlai.com'
   - '+.benlailife.com'
-  - '+.benmao8.com'
   - '+.benmu-health.com'
   - '+.benniux.com'
   - '+.bensedl.com'
@@ -17032,7 +17030,6 @@ payload:
   - '+.dangjian.com'
   - '+.dangjianwang.com'
   - '+.dangpu.com'
-  - '+.dangran.me'
   - '+.dangtianle.com'
   - '+.dangwan.com'
   - '+.dangzhi.com'
@@ -18438,7 +18435,6 @@ payload:
   - '+.docexcel.net'
   - '+.docin365.com'
   - '+.dockerinfo.net'
-  - '+.dockone.io'
   - '+.doclass.com'
   - '+.docpe.com'
   - '+.docs.cdnetworks.com'
@@ -21063,7 +21059,6 @@ payload:
   - '+.fastbestbetergoodcdn.com'
   - '+.fastcdn.com'
   - '+.fastdo.cc'
-  - '+.fastgit.org'
   - '+.fastgz.com'
   - '+.fastidea.cc'
   - '+.fastliii.com'
@@ -25911,7 +25906,6 @@ payload:
   - '+.heze.cc'
   - '+.hezebus.com'
   - '+.hezeribao.com'
-  - '+.hezhenzi.com'
   - '+.hezhidongli.com'
   - '+.hezhonglaw.com'
   - '+.hezhoubbs.com'
@@ -26884,7 +26878,6 @@ payload:
   - '+.hrayw.com'
   - '+.hrbaodian.com'
   - '+.hrbar.com'
-  - '+.hrbciming.com'
   - '+.hrbeduy.com'
   - '+.hrbesd.com'
   - '+.hrbjianchewang.com'
@@ -30246,7 +30239,6 @@ payload:
   - '+.jason-z.com'
   - '+.jasongj.com'
   - '+.jasperxu.com'
-  - '+.jatd.org'
   - '+.java-er.com'
   - '+.java1234.com'
   - '+.java2000.net'
@@ -33593,6 +33585,7 @@ payload:
   - '+.ksops.com'
   - '+.ksord.com'
   - '+.ksosoft.com'
+  - '+.kspays.com'
   - '+.kspkg.com'
   - '+.ksqdq.com'
   - '+.ksren.com'
@@ -38909,7 +38902,6 @@ payload:
   - '+.my97.net'
   - '+.myagric.com'
   - '+.myaijarvis.com'
-  - '+.myalert.info'
   - '+.myalicdn.com'
   - '+.myanjian.com'
   - '+.myanmarembassy.com'
@@ -42222,7 +42214,6 @@ payload:
   - '+.ppt360.com'
   - '+.ppt920.com'
   - '+.pptair.com'
-  - '+.pptake.com'
   - '+.pptbest.com'
   - '+.pptboss.com'
   - '+.pptbz.com'
@@ -43551,6 +43542,7 @@ payload:
   - '+.qqhot.com'
   - '+.qqhuhu.com'
   - '+.qqjay.com'
+  - '+.qqje.com'
   - '+.qqjia.com'
   - '+.qqjjsj.com'
   - '+.qqju.com'
@@ -43988,7 +43980,6 @@ payload:
   - '+.qvlz.com'
   - '+.qvpublish.com'
   - '+.qvxo.com'
-  - '+.qw.cc'
   - '+.qwdacy.com'
   - '+.qweather.com'
   - '+.qweather.net'
@@ -49438,7 +49429,6 @@ payload:
   - '+.szzyqc.net'
   - '+.szzyqy.com'
   - '+.t-bb.net'
-  - '+.t-biao.com'
   - '+.t-cha.com'
   - '+.t-cheshi.com'
   - '+.t-chs.com'
@@ -54931,6 +54921,7 @@ payload:
   - '+.winnermicro.com'
   - '+.winnet.cc'
   - '+.winning11cn.com'
+  - '+.winotes.net'
   - '+.winotmk.com'
   - '+.winrobot360.com'
   - '+.winsalesaas.com'
@@ -57095,7 +57086,6 @@ payload:
   - '+.xincainet.com'
   - '+.xincaitong.net'
   - '+.xincanshu.com'
-  - '+.xinceyq.com'
   - '+.xincg.com'
   - '+.xincha.com'
   - '+.xinchacha.com'
@@ -57191,7 +57181,6 @@ payload:
   - '+.xingtai123.com'
   - '+.xingtangzp.com'
   - '+.xingtongbo.com'
-  - '+.xingtouzi.com'
   - '+.xingtu.com'
   - '+.xinguad.com'
   - '+.xingumin.net'
@@ -62126,6 +62115,7 @@ payload:
   - '+.zhengcaimall.com'
   - '+.zhengcaishangcheng.com'
   - '+.zhengdabm.com'
+  - '+.zhengdaojiapei.com'
   - '+.zhengdaotang.com'
   - '+.zhengdichaiqian.com'
   - '+.zhengdongzulin.com'
@@ -63157,6 +63147,7 @@ payload:
   - '+.zjxpp.com'
   - '+.zjxqyy.com'
   - '+.zjxsbank.com'
+  - '+.zjxwtoy.com'
   - '+.zjyanxing.com'
   - '+.zjyari.com'
   - '+.zjycpx.com'
