--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1089,6 +1089,7 @@ payload:
   - '+.13.gs'
   - '+.130014.xyz'
   - '+.130158.com'
+  - '+.1306030402.club'
   - '+.131.com'
   - '+.13112.com'
   - '+.1314520sz.com'
@@ -5542,7 +5543,6 @@ payload:
   - '+.78901.net'
   - '+.789gg.com'
   - '+.789hi.com'
-  - '+.789msw.com'
   - '+.789zy.cc'
   - '+.78bar.com'
   - '+.78books.com'
@@ -6408,6 +6408,7 @@ payload:
   - '+.91yuedu.com'
   - '+.91yunying.com'
   - '+.91yxbox.com'
+  - '+.91yxl.com'
   - '+.91zhiwang.com'
   - '+.91zwk.com'
   - '+.91zy.com'
@@ -7930,6 +7931,7 @@ payload:
   - '+.al-jin.com'
   - '+.al8l.com'
   - '+.alabmed.com'
+  - '+.alaboshuiyan.com'
   - '+.alaccountant.com'
   - '+.alacun.com'
   - '+.aladdin-e.com'
@@ -10580,7 +10582,6 @@ payload:
   - '+.bingofresh.com'
   - '+.bingqipu.net'
   - '+.bingsin.com'
-  - '+.bingsns.com'
   - '+.bingtuannet.com'
   - '+.bingwang.cc'
   - '+.bingyan.net'
@@ -10975,7 +10976,6 @@ payload:
   - '+.bjsxt.com'
   - '+.bjsyqw.com'
   - '+.bjszhd.net'
-  - '+.bjtata.com'
   - '+.bjtcf.com'
   - '+.bjtelecom.net'
   - '+.bjtitle.com'
@@ -12301,6 +12301,7 @@ payload:
   - '+.casvm.com'
   - '+.casystar.com'
   - '+.cat898.com'
+  - '+.catdggga.com'
   - '+.catfish-cms.com'
   - '+.catguo.com'
   - '+.cathayagroup.com'
@@ -17359,6 +17360,7 @@ payload:
   - '+.dbankcloud.ru'
   - '+.dbankedge.net'
   - '+.dbbqb.com'
+  - '+.dbc2000.net'
   - '+.dbccv.com'
   - '+.dbcdh.com'
   - '+.dbcsq.com'
@@ -19620,6 +19622,7 @@ payload:
   - '+.easytrip.com'
   - '+.easyzw.com'
   - '+.eateapp.com'
+  - '+.eaten.fun'
   - '+.eaydu.com'
   - '+.eayou.com'
   - '+.eayuan.com'
@@ -19698,6 +19701,7 @@ payload:
   - '+.eceibs20.com'
   - '+.ecej.com'
   - '+.ecer.com'
+  - '+.ecezt.com'
   - '+.ecgci.com'
   - '+.ecgoods.com'
   - '+.echanceyun.com'
@@ -21093,6 +21097,7 @@ payload:
   - '+.fanxiaocuo.com'
   - '+.fanxiaojian.com'
   - '+.fanxing.com'
+  - '+.fanxingshidaitech.com'
   - '+.fanxuefei.com'
   - '+.fany-eda.com'
   - '+.fany-online.com'
@@ -22863,6 +22868,7 @@ payload:
   - '+.gddcm.com'
   - '+.gddg.cc'
   - '+.gddhn.com'
+  - '+.gddtop.com'
   - '+.gdebidding.com'
   - '+.gdefair.com'
   - '+.gdems.com'
@@ -22915,6 +22921,7 @@ payload:
   - '+.gds-services.com'
   - '+.gdscse.net'
   - '+.gdsdwan.com'
+  - '+.gdshisha.com'
   - '+.gdsincom.com'
   - '+.gdslwl.com'
   - '+.gdsports.net'
@@ -24184,6 +24191,7 @@ payload:
   - '+.gumo.pro'
   - '+.gunfans.net'
   - '+.guo.com'
+  - '+.guo506393.xyz'
   - '+.guo7.com'
   - '+.guo98.com'
   - '+.guoanaz.com'
@@ -25399,6 +25407,7 @@ payload:
   - '+.hbdfdh.com'
   - '+.hbdmia.com'
   - '+.hbdtjqj.com'
+  - '+.hbdx-kdyy.com'
   - '+.hbdzcg.com'
   - '+.hbeducloud.com'
   - '+.hbekt.com'
@@ -30198,7 +30207,6 @@ payload:
   - '+.ixingpan.com'
   - '+.ixinqing.com'
   - '+.ixintu.com'
-  - '+.ixintui.com'
   - '+.ixinwei.com'
   - '+.ixinyou.com'
   - '+.ixiqi.com'
@@ -30445,6 +30453,7 @@ payload:
   - '+.jcsb.com'
   - '+.jcsfs.com'
   - '+.jcsjt.com'
+  - '+.jcsy66.com'
   - '+.jctmj.net'
   - '+.jctrans.com'
   - '+.jcu.cc'
@@ -31680,6 +31689,7 @@ payload:
   - '+.jkjzt.com'
   - '+.jkpan.cc'
   - '+.jkpj.com'
+  - '+.jkqivrs.com'
   - '+.jktcom.com'
   - '+.jktong.com'
   - '+.jktower.com'
@@ -32618,7 +32628,6 @@ payload:
   - '+.jyss.net'
   - '+.jysyzk.com'
   - '+.jytdlz.com'
-  - '+.jywstw.com'
   - '+.jyxdyzx.com'
   - '+.jyxfzd.com'
   - '+.jyxlxbj.com'
@@ -36357,6 +36366,7 @@ payload:
   - '+.luffycity.com'
   - '+.lufunds.com'
   - '+.lugangsoft.com'
+  - '+.lugick.com'
   - '+.lugir.com'
   - '+.luhao198.com'
   - '+.luhehospital.com'
@@ -36949,6 +36959,7 @@ payload:
   - '+.maixiaba.com'
   - '+.maixuewen.com'
   - '+.maiya91.com'
+  - '+.maiyanju.com'
   - '+.maiyaole.com'
   - '+.maizhi.com'
   - '+.maiziedu.com'
@@ -38343,6 +38354,7 @@ payload:
   - '+.mmc-data.com'
   - '+.mmcctuia2.com'
   - '+.mmcos.com'
+  - '+.mmcsgo.com'
   - '+.mmfad.com'
   - '+.mmfang.cc'
   - '+.mmfi.net'
@@ -38361,6 +38373,7 @@ payload:
   - '+.mmmiao.com'
   - '+.mmmmmmm.com'
   - '+.mmmtech.com'
+  - '+.mmods.site'
   - '+.mmosite.com'
   - '+.mmscoo.com'
   - '+.mmsfw.com'
@@ -39737,6 +39750,7 @@ payload:
   - '+.newbeebook.com'
   - '+.newbmiao.com'
   - '+.newbolunesport.com'
+  - '+.newboshi.com'
   - '+.newcapec.net'
   - '+.newcger.com'
   - '+.newchainbase.com'
@@ -40190,6 +40204,7 @@ payload:
   - '+.noeic.com'
   - '+.nohken-sdy.com'
   - '+.nohup.cc'
+  - '+.noirphoenix.studio'
   - '+.noizztv.com'
   - '+.nokia-sbell.com'
   - '+.nokia88.com'
@@ -41426,6 +41441,7 @@ payload:
   - '+.paopaox.com'
   - '+.paoxq.com'
   - '+.paoxue.com'
+  - '+.paoying.net'
   - '+.papa21.com'
   - '+.papa91.com'
   - '+.papaao.com'
@@ -43893,6 +43909,7 @@ payload:
   - '+.qtlgslbcn.info'
   - '+.qtmojo.com'
   - '+.qtonghua.com'
+  - '+.qtool.net'
   - '+.qtrun.com'
   - '+.qtshe.com'
   - '+.qtshu.com'
@@ -44582,6 +44599,7 @@ payload:
   - '+.reformdata.org'
   - '+.refractorywin.com'
   - '+.reg007.com'
+  - '+.regexr-cn.com'
   - '+.reglogo.net'
   - '+.regtm.com'
   - '+.rehtt.com'
@@ -44926,7 +44944,6 @@ payload:
   - '+.rongcfg.com'
   - '+.rongchain.com'
   - '+.rongchenjx.com'
-  - '+.rongdewang.com'
   - '+.rongechain.com'
   - '+.ronghaosk.com'
   - '+.ronghope.com'
@@ -45281,6 +45298,7 @@ payload:
   - '+.rzhuaqiangu.com'
   - '+.rzline.com'
   - '+.rzok.net'
+  - '+.rzsie.com'
   - '+.rzspx.com'
   - '+.rzszp.com'
   - '+.rzwssy.com'
@@ -46017,7 +46035,6 @@ payload:
   - '+.senguo.com'
   - '+.sengxian.com'
   - '+.seniverse.com'
-  - '+.senleo.com'
   - '+.senlianshop.com'
   - '+.senmi88.com'
   - '+.senmiaoschool.com'
@@ -46571,6 +46588,7 @@ payload:
   - '+.shenhua.cc'
   - '+.shenhuagushi.net'
   - '+.shenjian.io'
+  - '+.shenjianhui.com'
   - '+.shenjiballs.com'
   - '+.shenkexin.com'
   - '+.shenkong.net'
@@ -48612,6 +48630,7 @@ payload:
   - '+.starrockinvest.com'
   - '+.starrtc.com'
   - '+.starrysurvey.com'
+  - '+.stars-one.site'
   - '+.starschina.com'
   - '+.starschinalive.com'
   - '+.starsino.com'
@@ -54770,6 +54789,7 @@ payload:
   - '+.whchenyi.com'
   - '+.whckxx.com'
   - '+.whcotton.com'
+  - '+.whcqedu.com'
   - '+.whcrewin.com'
   - '+.whcst.com'
   - '+.whctv.com'
@@ -54972,7 +54992,6 @@ payload:
   - '+.whwuyan.com'
   - '+.whwx2018.com'
   - '+.whwxxy.com'
-  - '+.whxc01.com'
   - '+.whxh.com'
   - '+.whxinhuo.com'
   - '+.whxunw.com'
@@ -57556,6 +57575,7 @@ payload:
   - '+.xinsanbanbao.com'
   - '+.xinsdn.com'
   - '+.xinshangmeng.com'
+  - '+.xinshangmeng3.com'
   - '+.xinshangshangxin.com'
   - '+.xinshiba.com'
   - '+.xinshipu.com'
@@ -57941,6 +57961,7 @@ payload:
   - '+.xmbankonline.com'
   - '+.xmbhw.com'
   - '+.xmbike.com'
+  - '+.xmcbzj.com'
   - '+.xmccb.com'
   - '+.xmcdn.com'
   - '+.xmchong.com'
@@ -58736,6 +58757,7 @@ payload:
   - '+.xyzs.com'
   - '+.xyzsq.com'
   - '+.xyzvo.com'
+  - '+.xyzywl.com'
   - '+.xz-juming.com'
   - '+.xz.com'
   - '+.xz577.com'
@@ -60011,6 +60033,7 @@ payload:
   - '+.yjq.cc'
   - '+.yjrcyw.com'
   - '+.yjro.com'
+  - '+.yjrxcw.com'
   - '+.yjrzj.com'
   - '+.yjs-cdn.com'
   - '+.yjs-cdn10.com'
@@ -60912,6 +60935,7 @@ payload:
   - '+.yuapt.com'
   - '+.yubaike.com'
   - '+.yubangweb.com'
+  - '+.yubb12.site'
   - '+.yubnjy.com'
   - '+.yubohr.com'
   - '+.yuboinfo.com'
@@ -61965,6 +61989,7 @@ payload:
   - '+.zeroling.com'
   - '+.zeruns.tech'
   - '+.zerustech.com'
+  - '+.zesee.com'
   - '+.zesidasi.com'
   - '+.zesmob.com'
   - '+.zeststore.com'
@@ -64246,7 +64271,6 @@ payload:
   - '+.zyucan.com'
   - '+.zyue.com'
   - '+.zyun.vip'
-  - '+.zywjjdw.com'
   - '+.zywjw.com'
   - '+.zywxpress.com'
   - '+.zyxr.com'
