--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1973,6 +1973,7 @@ payload:
   - '+.21shhr.com'
   - '+.21shipin.com'
   - '+.21shte.net'
+  - '+.21skcy.com'
   - '+.21smov.com'
   - '+.21so.com'
   - '+.21softs.com'
@@ -2896,7 +2897,6 @@ payload:
   - '+.37.com'
   - '+.37088924.cc'
   - '+.370fd.com'
-  - '+.370fd.net'
   - '+.371.com'
   - '+.371.net'
   - '+.3710167.com'
@@ -3499,6 +3499,7 @@ payload:
   - '+.5119.net'
   - '+.511mv.com'
   - '+.511wan.com'
+  - '+.511wx.com'
   - '+.511yj.com'
   - '+.5120.com'
   - '+.5120bb.com'
@@ -4902,7 +4903,6 @@ payload:
   - '+.61.com'
   - '+.610115.com'
   - '+.610213.net'
-  - '+.6111.fyi'
   - '+.612.com'
   - '+.6120aa.com'
   - '+.612345.com'
@@ -6953,6 +6953,7 @@ payload:
   - '+.a67dy.com'
   - '+.a6shi.com'
   - '+.a7.com'
+  - '+.a745.xyz'
   - '+.a8.com'
   - '+.a8f947.com'
   - '+.a8tg.com'
@@ -7636,6 +7637,7 @@ payload:
   - '+.ailewan.com'
   - '+.aili.com'
   - '+.ailinglei.com'
+  - '+.ailingmao.com'
   - '+.ailinux.net'
   - '+.ailinzhou.com'
   - '+.ailiyun.com'
@@ -9377,6 +9379,7 @@ payload:
   - '+.baidutt.com'
   - '+.baiduux.com'
   - '+.baiduv.com'
+  - '+.baiduvjsbvjknlsvsv.com'
   - '+.baiduwebgame.com'
   - '+.baiduwpan.com'
   - '+.baiduyun.com'
@@ -10395,6 +10398,7 @@ payload:
   - '+.biduo.cc'
   - '+.biduobao.com'
   - '+.biduoxs.com'
+  - '+.biduwenxue.com'
   - '+.bidwhy.com'
   - '+.biede.com'
   - '+.biedoul.com'
@@ -10577,6 +10581,7 @@ payload:
   - '+.biqu6.com'
   - '+.biqubao.com'
   - '+.biqubu.com'
+  - '+.biqudao.cc'
   - '+.biqudu.com'
   - '+.biqudu.net'
   - '+.biqudu.tv'
@@ -13681,7 +13686,6 @@ payload:
   - '+.chinacleanexpo.com'
   - '+.chinacma.org'
   - '+.chinacmo.com'
-  - '+.chinacnr.com'
   - '+.chinacoal.com'
   - '+.chinacomix.com'
   - '+.chinaconch.com'
@@ -14196,6 +14200,7 @@ payload:
   - '+.chixuyun.com'
   - '+.chiyekeji.com'
   - '+.chiyuekj.com'
+  - '+.chizao.com'
   - '+.chizhouchacha.com'
   - '+.chizhoujob.com'
   - '+.chizhouren.com'
@@ -17761,6 +17766,7 @@ payload:
   - '+.dhifi.com'
   - '+.dhimavision.com'
   - '+.dhjt.com'
+  - '+.dhkipdsc.xyz'
   - '+.dhkq120.com'
   - '+.dhkqmz.com'
   - '+.dhkqyy.com'
@@ -18108,6 +18114,7 @@ payload:
   - '+.div.io'
   - '+.divcss5.com'
   - '+.divetgallery.com'
+  - '+.diving-fish.com'
   - '+.diwork.com'
   - '+.dixintong.com'
   - '+.diyamh.com'
@@ -18293,6 +18300,7 @@ payload:
   - '+.dmrtb.com'
   - '+.dmssc.net'
   - '+.dmtg.com'
+  - '+.dmwx.org'
   - '+.dmyz.org'
   - '+.dmyzw.com'
   - '+.dmzfa.com'
@@ -19563,6 +19571,7 @@ payload:
   - '+.ebigear.com'
   - '+.ebiobuy.com'
   - '+.ebioe.com'
+  - '+.ebiotrade.com'
   - '+.ebioweb.com'
   - '+.ebjfinance.com'
   - '+.ebkj.net'
@@ -20967,6 +20976,7 @@ payload:
   - '+.fanqie.im'
   - '+.fanqienovel.com'
   - '+.fanqier.com'
+  - '+.fanqiesdkpic.com'
   - '+.fanqiesoq.com'
   - '+.fanqietuan.com'
   - '+.fanqievv.com'
@@ -24943,7 +24953,6 @@ payload:
   - '+.hanzify.org'
   - '+.hao-sheng-yi.com'
   - '+.hao.ac'
-  - '+.hao007.net'
   - '+.hao0202.com'
   - '+.hao120.cc'
   - '+.hao123-hao123.com'
@@ -25370,7 +25379,6 @@ payload:
   - '+.hblccy.com'
   - '+.hbldwx.com'
   - '+.hbliti.com'
-  - '+.hblsj.com'
   - '+.hblszq.com'
   - '+.hbltzb.com'
   - '+.hblykj.com'
@@ -34143,6 +34151,7 @@ payload:
   - '+.lan-lin.com'
   - '+.lan1001.com'
   - '+.lanbts.com'
+  - '+.lancdn.com'
   - '+.lanchenglv.com'
   - '+.lancn.net'
   - '+.lanconvey.com'
@@ -35877,6 +35886,7 @@ payload:
   - '+.longjcun.com'
   - '+.longjiazuo.com'
   - '+.longjisz.com'
+  - '+.longjunjiayuan.com'
   - '+.longk.com'
   - '+.longkui.site'
   - '+.longlinjiaoyu.com'
@@ -36867,6 +36877,7 @@ payload:
   - '+.mamahao.com'
   - '+.mamahuo.com'
   - '+.mamcharge.com'
+  - '+.mamecn.com'
   - '+.mamicode.com'
   - '+.mamilist.com'
   - '+.mamioo.com'
@@ -43154,6 +43165,7 @@ payload:
   - '+.qingclasscdn.com'
   - '+.qingcloud.com'
   - '+.qingcongxiaoyuan.com'
+  - '+.qingdan.com'
   - '+.qingdaochina.org'
   - '+.qingdaograndtheatre.com'
   - '+.qingdaogxt.com'
@@ -43700,6 +43712,7 @@ payload:
   - '+.qstatic.com'
   - '+.qstbg.com'
   - '+.qstsking.com'
+  - '+.qsw.la'
   - '+.qsw521.com'
   - '+.qswhcb.com'
   - '+.qswzayy.com'
@@ -43769,7 +43782,6 @@ payload:
   - '+.quanlaodaonline.com'
   - '+.quanlego.com'
   - '+.quanmaihuyu.com'
-  - '+.quanmama.com'
   - '+.quanmamaimg.com'
   - '+.quanmeipai.com'
   - '+.quanmin-game.com'
@@ -45143,6 +45155,7 @@ payload:
   - '+.sa-ec.com'
   - '+.sa-log.com'
   - '+.sa20.com'
+  - '+.sa8zdui.com'
   - '+.sa96.com'
   - '+.saasddos.com'
   - '+.saasruanjian.com'
@@ -57097,6 +57110,7 @@ payload:
   - '+.xilinsi.org'
   - '+.xilish.com'
   - '+.xilu.com'
+  - '+.xiluoxuan.com'
   - '+.xilvlaw.com'
   - '+.xima.org'
   - '+.xima.tv'
@@ -57803,6 +57817,7 @@ payload:
   - '+.xmylhy.com'
   - '+.xmzangao.com'
   - '+.xmzdls.com'
+  - '+.xmzmmr.com'
   - '+.xmzsyg.com'
   - '+.xmzylh.com'
   - '+.xn--2krw29cdqai43k.com'
@@ -58077,7 +58092,6 @@ payload:
   - '+.xuanxuangame.com'
   - '+.xuanxuantemai.com'
   - '+.xuanxue.com'
-  - '+.xuanxueyuan.com'
   - '+.xuanyangxl.com'
   - '+.xuanyaoxp.com'
   - '+.xuanyouwang.com'
@@ -59902,6 +59916,7 @@ payload:
   - '+.ymq.com'
   - '+.ymraaa.com'
   - '+.ymrcw.vip'
+  - '+.yms.cool'
   - '+.ymsteam.com'
   - '+.ymt.com'
   - '+.ymt360.com'
@@ -60132,7 +60147,6 @@ payload:
   - '+.youdemai.com'
   - '+.youdiancms.com'
   - '+.youdingte.com'
-  - '+.youdu.im'
   - '+.youdubook.com'
   - '+.youduzw.com'
   - '+.youdwh.com'
@@ -61218,6 +61232,7 @@ payload:
   - '+.yxbuluo.com'
   - '+.yxcax.com'
   - '+.yxcc.net'
+  - '+.yxchg.com'
   - '+.yxcity.com'
   - '+.yxcshui.com'
   - '+.yxdaily.com'
@@ -62181,6 +62196,7 @@ payload:
   - '+.zhe.com'
   - '+.zhe2.com'
   - '+.zhe800.com'
+  - '+.zhe97.com'
   - '+.zhebei.com'
   - '+.zheerhui.com'
   - '+.zhefengle.com'
@@ -63340,7 +63356,6 @@ payload:
   - '+.zltianhen.com'
   - '+.zluren.com'
   - '+.zlvod.com'
-  - '+.zlw.so'
   - '+.zlxiang.com'
   - '+.zlygu.com'
   - '+.zm1717.com'
@@ -63535,10 +63550,12 @@ payload:
   - '+.zqbzs.cc'
   - '+.zqcloudgame.com'
   - '+.zqcyzg.com'
+  - '+.zqdns37.vip'
   - '+.zqfxj.com'
   - '+.zqgame.com'
   - '+.zqgreen.com'
   - '+.zqic.net'
+  - '+.zqids.com'
   - '+.zqjjr.com'
   - '+.zqlian.com'
   - '+.zqlx.com'
